header structure added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,26 @@
   <div class="container">
     <!--header section start-->
     <header>
-      
+      <div class="wrapper">
+        <div class="header-container">
+          <h1 class="logo"><a href="#FIXME" title="World Ocean Initiative" rel="noopener noreferrer"><img src="https://placehold.jp/190x68.png" alt="Logo"></a></h1>
+          <div class="hamburger">
+            <span class="bar">bar</span>
+          </div>
+          <nav>
+            <ul class="nav-items">
+              <li class="nav-list"><a href="#FIXME" title="Home" rel="noopener noreferrer">home</a></li>
+              <li class="nav-list"><a href="#FIXME" title="About Us" rel="noopener noreferrer">about us</a></li>
+              <li class="nav-list"><a href="#FIXME" title="Work Areas" rel="noopener noreferrer">work areas</a></li>
+              <li class="nav-list"><a href="#FIXME" title="World Ocean Summit" rel="noopener noreferrer">world ocean summit</a></li>
+              <li class="nav-list"><a href="#FIXME" title="Engage" rel="noopener noreferrer">engage</a></li>
+            </ul>
+          </nav>
+          <div class="search">
+            <a href="#FIXME" title="Search" rel="noopener noreferrer" class="search-icon">search</a>
+          </div>
+        </div>
+      </div>
     </header>
     <!--header section start-->
     <!--main section start-->
