--- a/index.html
+++ b/index.html
@@ -47,7 +47,19 @@
     <!--header section start-->
     <!--main section start-->
     <main>
-
+      <!-- banner section start -->
+      <section class="banner">
+        <div class="wrapper">
+          <div class="box-1"><h2>blue economy</h2></div>
+          <div class="box-2">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+            commodo consequat.</p>
+          </div>
+          <div class="box-3"><span>rectangle</span></div>
+        </div>
+      </section>
+      <!-- banner section end -->
     </main>
     <!--main section end-->
 
