booking section structure added

--- a/index.html
+++ b/index.html
@@ -60,6 +60,28 @@
         </div>
       </section>
       <!-- banner section end -->
+      <!-- booking section start -->
+      <section class="booking">
+        <div class="wrapper booking-container">        
+          <div class="booking-content">
+              <h3>world ocean summit 2017</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua...</p>
+              <ul class="booking-btns">
+                <li class="btn-1"><a href="#FIXME" title="Read More" rel="noopener noreferrer">read more</a></li>
+                <li class="btn-2"><a href="#FIXME" title="Book Now" rel="noopener noreferrer">book now</a></li>
+              </ul>
+              <ul class="booking-details">
+                <li class="booking-list"><address>bali,indonesia</address></li>
+                <li class="booking-list"><span>february 22nd-24th 2017</span></li>
+              </ul>
+          </div>
+          <figure class="booking-image">
+            <img src="https://placehold.jp/674x410.png" alt="Loading...">
+          </figure>
+        </div>
+      </section>
+      <!-- booking section end -->
     </main>
     <!--main section end-->
 
