article section structure added

--- a/index.html
+++ b/index.html
@@ -82,6 +82,92 @@
         </div>
       </section>
       <!-- booking section end -->
+      <!-- article section start -->
+      <section class="article">
+        <div class="wrapper">
+          <div class="section-heading">
+            <h4>featured articles</h4>
+          </div>
+          <div class="article-container">
+            <ul class="article-items">
+              <li class="article-list">
+                <h5>saving corals</h5>
+                <p>Lorem ipsum dolor sit amet, consectet...</p>
+              </li>
+              <li class="article-list">
+                <h5>saving corals</h5>
+                <p>Lorem ipsum dolor sit amet, consectet...</p>
+              </li>
+              <li class="article-list">
+                <h5>saving corals</h5>
+                <p>Lorem ipsum dolor sit amet, consectet...</p>
+              </li>
+              <li class="article-list">
+                <h5>saving corals</h5>
+                <p>Lorem ipsum dolor sit amet, consectet...</p>
+              </li>
+              <li class="article-list">
+                <h5>saving corals</h5>
+                <p>Lorem ipsum dolor sit amet, consectet...</p>
+              </li>
+              <li class="article-list">
+                <h5>saving corals</h5>
+                <p>Lorem ipsum dolor sit amet, consectet...</p>
+              </li>
+              <li class="article-list">
+                <h5>saving corals</h5>
+                <p>Lorem ipsum dolor sit amet, consectet...</p>
+              </li>
+              <li class="article-list">
+                <h5>saving corals</h5>
+                <p>Lorem ipsum dolor sit amet, consectet...</p>
+              </li>
+              <li class="article-list">
+                <h5>saving corals</h5>
+                <p>Lorem ipsum dolor sit amet, consectet...</p>
+              </li>
+              <li class="article-list">
+                <h5>saving corals</h5>
+                <p>Lorem ipsum dolor sit amet, consectet...</p>
+              </li>
+              <li class="article-list">
+                <h5>saving corals</h5>
+                <p>Lorem ipsum dolor sit amet, consectet...</p>
+              </li>
+              <li class="article-list">
+                <h5>saving corals</h5>
+                <p>Lorem ipsum dolor sit amet, consectet...</p>
+              </li>
+              <li class="article-list">
+                <h5>saving corals</h5>
+                <p>Lorem ipsum dolor sit amet, consectet...</p>
+              </li>
+              <li class="article-list">
+                <h5>saving corals</h5>
+                <p>Lorem ipsum dolor sit amet, consectet...</p>
+              </li>
+            </ul>
+            <div class="article-details">
+              <div class="article-heading">
+                <h5>saving corals</h5>
+                <span>blue economy</span>
+              </div>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+              aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+              <div class="article-end">
+                <div class="unit">
+                  <span>economist intelligence unit</span>
+                </div>
+                <div class="readMore-btn">
+                  <a href="#FIXME" title="Read More" rel="noopener noreferrer">read more</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- article section end -->
     </main>
     <!--main section end-->
 
