infographic section structure added

--- a/index.html
+++ b/index.html
@@ -168,6 +168,61 @@
         </div>
       </section>
       <!-- article section end -->
+      <!-- infographic section start -->
+      <section class="infographic">
+        <div class="wrapper">
+          <div class="section-heading">
+            <h4>infographic</h4>
+          </div>
+          <ul class="info-items">
+            <li class="info-list">
+              <figure class="info-image">
+                <img src="https://placehold.jp/468x526.png" alt="Loading...">
+              </figure>
+              <div class="content">
+                <h5>the sea-through sea</h5>
+                <p>if the ocean were transparent, what
+                would humans see?</p>
+                <div class="info-btn">
+                  <a href="#FIXME" title="Know More" class="info-icon" rel="noopener noreferrer">Know</a>
+                </div>
+              </div>
+            </li>
+            <li class="info-list">
+              <figure class="info-image">
+                <img src="https://placehold.jp/468x526.png" alt="Loading...">
+              </figure>
+              <div class="content">
+                <h5>the sea-through sea</h5>
+                <p>if the ocean were transparent, what
+                would humans see?</p>
+                <div class="info-btn">
+                  <a href="#FIXME" title="Know More" class="info-icon" rel="noopener noreferrer">Know</a>
+                </div>
+              </div>
+            </li>
+            <li class="info-list">
+              <figure class="info-image">
+                <img src="https://placehold.jp/468x526.png" alt="Loading...">
+              </figure>
+              <div class="content">
+                <h5>the sea-through sea</h5>
+                <p>if the ocean were transparent, what
+                would humans see?</p>
+                <div class="info-btn">
+                  <a href="#FIXME" title="Know More" class="info-icon" rel="noopener noreferrer">Know</a>
+                </div>
+              </div>
+            </li>
+          </ul>
+          <div class="slider">
+            <div class="slide-bar">
+              <span class="slide-thumb">thumb</span>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- infographic section end -->
     </main>
     <!--main section end-->
 
