newsletter structure added

--- a/index.html
+++ b/index.html
@@ -223,6 +223,21 @@
         </div>
       </section>
       <!-- infographic section end -->
+      <!-- newsletter div start -->
+      <div class="newsletter">
+        <div class="wrapper">
+          <form action="#FIXME">
+            <div class="input-group">
+              <label>Subscribe to our Newsletter</label>
+              <input type="text" name="email" placeholder="Enter your Email-ID">
+            </div>
+            <div class="input-control">
+              <button class="submit-icon" type="submit">submit</button>
+            </div>
+          </form>
+        </div>
+      </div>
+      <!-- newsletter div end -->
     </main>
     <!--main section end-->
 
