footer structure added

--- a/index.html
+++ b/index.html
@@ -243,7 +243,20 @@
 
     <!--footer section start-->
     <footer>      
-
+      <div class="wrapper">
+        <div class="footer-content">
+          <h6 class="footer-logo">world ocean initiative</h6>
+          <ul class="social-items">
+            <li class="social-list"><a href="#FIXME" title="Facebook" class="facebook" target="_blank" rel="noopener noreferrer">facebook</a></li>
+            <li class="social-list"><a href="#FIXME" title="Twitter" class="twitter" target="_blank" rel="noopener noreferrer">twitter</a></li>
+            <li class="social-list"><a href="#FIXME" title="Google" class="google" target="_blank" rel="noopener noreferrer">google</a></li>
+            <li class="social-list"><a href="#FIXME" title="Linkedin" class="linkedin" target="_blank" rel="noopener noreferrer">linkedin</a></li>
+          </ul>
+          <div class="contact-btn">
+            <a href="#FIXME" title="Contact Us" rel="noopener noreferrer">contact us</a>
+          </div>
+        </div>
+      </div>
     </footer>
     <!--footer section end-->
 
