--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
       <!-- banner section end -->
       <!-- booking section start -->
       <section class="booking">
-        <div class="wrapper booking-container">        
-          <div class="booking-content">
+        <div class="wrapper">     
+          <div class="booking-container">
+            <div class="booking-content">
               <h3>world ocean summit 2017</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
               tempor incididunt ut labore et dolore magna aliqua...</p>
@@ -75,10 +76,11 @@
                 <li class="booking-list"><address>bali,indonesia</address></li>
                 <li class="booking-list"><span>february 22nd-24th 2017</span></li>
               </ul>
-          </div>
-          <figure class="booking-image">
+            </div>
+            <figure class="booking-image">
             <img src="https://placehold.jp/674x410.png" alt="Loading...">
-          </figure>
+            </figure>
+          </div>   
         </div>
       </section>
       <!-- booking section end -->
