--- a/index.html
+++ b/index.html
@@ -150,21 +150,23 @@
               </li>
             </ul>
             <div class="article-details">
-              <div class="article-heading">
-                <h5>saving corals</h5>
-                <span>blue economy</span>
-              </div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-              aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco consectetur adipiscing elit, sed do eiusmod tempor
-              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
-              <div class="article-end">
-                <div class="unit">
-                  <span>economist intelligence unit</span>
+              <div class="article-content">
+                <div class="article-heading">
+                  <h5>saving corals</h5>
+                  <span>blue economy</span>
                 </div>
-                <div class="readMore-btn">
-                  <a href="#FIXME" title="Read More" rel="noopener noreferrer">read more</a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                <div class="article-end">
+                  <div class="unit">
+                    <span>economist intelligence unit</span>
+                  </div>
+                  <div class="readMore-btn">
+                    <a href="#FIXME" title="Read More" rel="noopener noreferrer">read more</a>
+                  </div>
                 </div>
-              </div>
+              </div>              
             </div>
           </div>
         </div>
